# convolutional_neural_network_energy_improvement

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Report.md
evaluation/test/: plot_csv.ipynb
src/base/communication/: CMakeLists.txt  command.h  communicationhandler.cpp  communicationhandler.h  uart_helper.cpp  uart_helper.h
src/base/dataprovider/: CMakeLists.txt  dataconverter.h  dataproviderserial.cpp  dataproviderserial.h  idataprovider.h
src/base/json/: CMakeLists.txt
src/base/log/: CMakeLists.txt  log.h
src/base/statemachine/: CMakeLists.txt  finitestatemachine.h
src/mnist/: CMakeLists.txt  README.md  ResultReporter.cpp  ResultReporter.h  core.cpp  core.h  main.cpp  main_functions.cpp
src/mnist/ml/: IMLCoreReporter.h  MLCore.cpp  MLCore.h
src/mnist/test_data/: dataprovidertest.cpp  dataprovidertest.h  test_data.h
src/mnist/tools/: Convolutions.ipynb  correlation_analysis.ipynb  fashion_mnist_classify_on_pi.ipynb  send_image.py  test_serial_com.ipynb  trace_analysis.ipynb
src/mnist/train/: kerassurgeon_test.ipynb  mnist.h5  model.h  model.h5  model.tflite  train_fashion_mnist_model.ipynb  train_mnist_cnn.ipynb
src/mnist/train/models/baseline/: 1_0.3315724730491638_0.8928999900817871.h5
src/mnist/train/models/structured_pruning/: 1.5_0.40001380443573_0.8611999750137329.h5  16.0_0.515175998210907_0.8228999972343445.h5  2.0_0.37604352831840515_0.8689000010490417.h5  24.0_0.5242355465888977_0.8087000250816345.h5  3.0_0.3695162832736969_0.8722000122070312.h5  32.0_0.5416665077209473_0.8044999837875366.h5  4.0_0.3817669153213501_0.8628000020980835.h5  48.0_0.5723764300346375_0.7944999933242798.h5  64.0_0.6213505864143372_0.7741000056266785.h5  8.0_0.4514373540878296_0.8331000208854675.h5  inference.csv  inference_corr.csv  inference_corr.tex  pruning.csv  pruning_and_inference.csv  pruning_and_inference.tex
src/mnist/train/models/unstructured_pruning/: 1.5_0.3252561390399933_0.891700029373169.h5  16_0.6300343871116638_0.7609999775886536.h5  24_0.7002102732658386_0.7430999875068665.h5  2_0.3429083526134491_0.8878999948501587.h5  32_0.8336520791053772_0.7156000137329102.h5  3_0.3318140208721161_0.8848000168800354.h5  48_1.0612801313400269_0.6811000108718872.h5  4_0.3451225459575653_0.8779000043869019.h5  64_1.6582385301589966_0.42899999022483826.h5  8_0.4504634141921997_0.8421000242233276.h5  inference.csv  inference_corr.csv  inference_corr.tex  inference_speedup.csv  inference_speedup_corr.csv  inference_speedup_corr.tex  pruning.csv  pruning_and_inference.csv  pruning_and_inference.tex  pruning_and_inference_speedup.csv  pruning_and_inference_speedup.tex
src/test_communication/: CMakeLists.txt  main.cpp
src/test_dataprovider/: CMakeLists.txt  main.cpp
src/timing/: CMakeLists.txt  main.cpp
src/tracing/: Classify.py  LIS35DE.py  LIS35DEreg.py  README.md  Tracing.py  dwfconstants.py  main.py
